--- a/Models/practice/src/assets/style/myStyle.scss
+++ b/Models/practice/src/assets/style/myStyle.scss
@@ -4,15 +4,23 @@
     background-color: beige;
 }
 
-.mainCard {
-  margin: 20px;
+/*.mainCard {
+  //margin: 20px;
   .cardBody{
     font-size: 20px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: 500;
-  /*grid-template-columns: repeat(1, 120px);*/
+  grid-template-columns: repeat(1, 120px);
   }
+}*/
+
+/*.MuiGrid-root{
+  display: flex;
+  justify-content: center !important;
+  margin: auto !important;
+  width: 100% !important;
 }
+*/
 .bottomNavLink {
   text-decoration: none;
   color: inherit;
