--- a/Models/practice/src/assets/style/myStyle.scss
+++ b/Models/practice/src/assets/style/myStyle.scss
@@ -1,75 +1,59 @@
-.homeContainer {
+$bg-color:#333;
+$base-color:  #fff;
+
+.top-nav {
+  background-color: $bg-color;
+  color: $base-color;
+  padding: 10px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  .top-nav-content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    .top-nav-logo {
+      color: $base-color;
+      font-size: 24px;
+      font-weight: bold;
+      text-decoration: none;
+    }
+    .top-nav-link {
+      color: $base-color;
+      text-decoration: none;
+      padding: 5px 10px;
+      border-radius: 5px;
+      transition: background-color 0.3s ease, color 0.3s ease;
+      margin-left: 10px;
+      &:hover{
+        background-color: #555;
+        color: $base-color;
+      }
+    }
+  }
+}
+
+.top-nav-cart {
+  display: flex;
+  justify-content: end;
+  align-items: center;
+  position: relative;
+}
+
+.footer {
+  background-color: #333;
+  color: #fff;
+  padding: 20px;
+  margin-top: 20px;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0; 
+  .footer-content {
     display: flex;
     flex-direction: column;
-    background-color: beige;
-}
-
-/*.mainCard {
-  //margin: 20px;
-  .cardBody{
-    font-size: 20px;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-weight: 500;
-  grid-template-columns: repeat(1, 120px);
+    align-items: center;
   }
-}*/
-
-/*.MuiGrid-root{
-  display: flex;
-  justify-content: center !important;
-  margin: auto !important;
-  width: 100% !important;
+  .footer-copyright {
+    color: #fff;
+    margin-bottom: 10px;
+  }
 }
-*/
-.bottomNavLink {
-  text-decoration: none;
-  color: inherit;
-}
-
-
-/*
-form {
-  border: #333 solid;
-  padding: 50px;
-}
-
-.dropdown {
-    position: relative;
-    button {
-      background-color: #f1f1f1;
-      border: none;
-      padding: 10;
-      cursor: pointer;
-    }
-  
-    .menu {
-      position: absolute;
-      top: 100%;
-      left: 0;
-      background-color: #f1f1f1;
-      border: 1px solid #ccc;
-      padding: 10px;
-      display: none;
-  
-      &.show {
-        display: block;
-      }
-  
-      .menu-item {
-        margin: 0;
-        padding: 5px;
-  
-        button {
-          background-color: transparent;
-          border: none;
-          padding: 0;
-          color: #333;
-          cursor: pointer;
-  
-          &:hover {
-            text-decoration: underline;
-          }
-        }
-      }
-    }
-  }*/
